# uniqueerror

./: CMakeLists.txt  README.md  ctors.cpp  main.cpp
checked_addition/: CMakeLists.txt  checked_addition.cpp
checked_addition/include/checked_addition/: checked_addition.h
checked_division/: CMakeLists.txt  checked_division.cpp
checked_division/include/checked_division/: checked_division.h
registry/: CMakeLists.txt  registry.cpp
registry/include/registry/: registry.h
